[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/hud/lives_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/items/chest/coin1.png" type="Texture" id=2]
[ext_resource path="res://assets/guns/polar_star/polar_star_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/prstartk.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://hud/hud.gd" type="Script" id=5]
[ext_resource path="res://assets/hud/long_dash.png" type="Texture" id=6]
[ext_resource path="res://assets/guns/laser/laser_idle.png" type="Texture" id=7]
[ext_resource path="res://assets/guns/knife/knife_idle.png" type="Texture" id=8]
[ext_resource path="res://hud/hud_gun_select.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[node name="HUD" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 0.490196 )

[node name="LivesSprite" type="Sprite" parent="."]
position = Vector2( 13, 8 )
texture = ExtResource( 1 )

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 70, 8 )
texture = ExtResource( 3 )

[node name="CoinSprite" type="Sprite" parent="."]
position = Vector2( 265, 8 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="KnifeSprite" type="Sprite" parent="."]
position = Vector2( 90, 8 )
texture = ExtResource( 8 )

[node name="LaserSprite" type="Sprite" parent="."]
position = Vector2( 119, 9 )
texture = ExtResource( 7 )

[node name="DashSprite" type="Sprite" parent="."]
position = Vector2( 240, 8 )
texture = ExtResource( 6 )

[node name="HUDGunSelect" parent="." instance=ExtResource( 9 )]
position = Vector2( 69, 8 )

[node name="LivesLabel" type="RichTextLabel" parent="."]
margin_left = 23.0
margin_top = 4.0
margin_right = 58.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 1 )
text = "x9"
scroll_active = false

[node name="LaserLabel" type="RichTextLabel" parent="."]
margin_left = 132.0
margin_top = 4.0
margin_right = 165.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 2 )
text = "100%"
scroll_active = false

[node name="CoinLabel" type="RichTextLabel" parent="."]
margin_left = 275.0
margin_top = 4.0
margin_right = 315.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
text = "0"
scroll_active = false
